--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,9 +1,70 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bf83a934-f443-48e4-bbe6-c9afff4a1045",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"hello world\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5ab74539-5397-4eb7-8567-7e7cf8d85242",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "4"
+      ],
+      "text/latex": [
+       "4"
+      ],
+      "text/markdown": [
+       "4"
+      ],
+      "text/plain": [
+       "[1] 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "3-4+5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32e5f87c-3e2d-4a07-8ff5-e89d6a692a07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "",
+   "name": ""
+  },
+  "language_info": {
+   "name": ""
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
-Hello
-
-
 }
